--- a/languages/en.lang
+++ b/languages/en.lang
@@ -1,5 +1,5 @@
 # index.js
-Goat.newVersionDetected=You are using version %1, the latest version is %2. Please update to use the bot better by typing into the console/cmd command: %3
+Goat.newVersionDetected=You are using version %1, the latest version is %2. Please update to use the bot better by typing into the console/cmd command: node update
 Goat.autoRestart1=Bot will auto restart in %1
 Goat.autoRestart2=Bot will auto restart by cron job: %1
 Goat.googleApiTokenExpired=Google API refresh token has expired or been revoked, please get a new token at https://developers.google.com/oauthplayground/
@@ -46,10 +46,10 @@ login.notLoggedIn=An error occurred, please check your Facebook account again
 login.callBackError=An error occurred when callback listenMqtt
 login.userBanned=You've been banned from using a bot!!
 login.checkGbanError=An error occurred while checking GBAN, try update source to latest version (open cmd and type: node update)
-login.gbanMessage=You have been banned from the Goat-Bot project on %1 for the reason: %2\n» Time: %3
-login.gbanMessageToDate=You have been banned from the Goat-Bot project on %1 for the reason: %2\n» Time: %3\n» To date: %4
+login.gbanMessage=You have been banned from the Goat-Bot project on %1 for the reason: %2\nÂ» Time: %3
+login.gbanMessageToDate=You have been banned from the Goat-Bot project on %1 for the reason: %2\nÂ» Time: %3\nÂ» To date: %4
 login.gbanAdminMessage=User %1 has been banned from the Goat-Bot project on %2 for the reason: %3
-login.openServerUptimeSuccess=🚀 Opened uptime server: %1
+login.openServerUptimeSuccess=ðŸš€ Opened uptime server: %1
 login.openServerUptimeError=An error has occurred, cannot open server uptime
 login.restartListenMessage=ListenMQTT restart enabled every %1
 login.stopRestartListenMessage=ListenMQTT restart disabled
@@ -89,29 +89,29 @@ handlerCheckData.cantCreateThread=Groups with id '%1' cannot be written to the d
 handlerCheckData.cantCreateUser=Users with id '%1' cannot be written to the database!
 
 # bot/handler/handlerEvents.js
-handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\n» Time: %2\n» User ID: %3
-handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
+handlerEvents.userBanned=You have been banned from using the bot\nÂ» Reason: %1\nÂ» Time: %2\nÂ» User ID: %3
+handlerEvents.threadBanned=This group has been banned from using the bot\nÂ» Reason: %1\nÂ» Time: %2\nÂ» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
 handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot
-handlerEvents.commandNotFound=Command "%1" does not exist, type %2help to see all available commands
-handlerEvents.commandNotFound2=The command you are using does not exist, type %1help to see all available commands
-handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
+handlerEvents.commandNotFound=[%1] 𝐍'𝐞𝐱𝐢𝐬𝐭𝐞 𝐩𝐚𝐬 𝐝𝐚𝐧𝐬 𝐦𝐚 𝐥𝐢𝐬𝐭𝐞 𝐝𝐞 𝐜𝐨𝐦𝐦𝐚𝐧𝐝𝐞𝐬 ⚫\n〉 [𝐭𝐚𝐩𝐞%2help📝] 𝐏𝐨𝐮𝐫 𝐯𝐨𝐢𝐫 𝐭𝐨𝐮𝐭𝐞𝐬 𝐥𝐞𝐬 𝐂𝐨𝐦𝐦𝐚𝐧𝐝𝐞𝐬 𝐝𝐢𝐬𝐩𝐨𝐧𝐢𝐛𝐥𝐞\n\n______________________________________________________________\n\n🌍𝗠𝗟𝗗✧𝗝𝗢𝗨𝗝𝗢𝗨🌍
+handlerEvents.commandNotFound2=🌍•𝗠𝗟𝗗✧𝗚𝗢𝗔𝗧𝗕𝗢𝗧•🌍\n______________________________________________________________\n\n🧠𝗖𝗥𝗘𝗔𝗧𝗘𝗨𝗥:☞𝐌𝐥𝐝/𝐓𝐡𝐞𝐚\n〉𝗖𝗼𝗻𝘁𝗮𝗰𝘁 𝗺𝗼𝗶 𝗶𝗰𝗶:\n☞ m.me/100085261760009\n\n𝗞𝗜𝗡𝗚👑:⚔️𝗛𝗜𝗠𝗥𝗔⚔️ 𝗲𝘀𝘁 𝗽𝗹𝘂𝘀 𝗙𝗢𝗥𝗧 𝗾𝘂𝗲 𝗗𝗜𝗗𝗜 𝗕 𝗿𝗲𝘁𝗶𝗲𝗻𝘀 𝗕𝗜𝗘𝗡 𝗰̧𝗮 🧠\n______________________________________________________________\n\n🔥𝗠𝗟𝗗✧𝗘𝗠𝗠𝗔𝗡𝗨𝗘𝗟🔥        𝐏𝐑𝐄𝐅𝐈𝐗:☞『'』
+handlerEvents.commandSyntaxError=￢_￢ | ❌ 𝗕𝗔𝗞𝗔\n______________________________________________________________\n〉♡:[%1help %2]\n➤𝚑𝚘𝚠 𝚝𝚘 𝚞𝚜𝚎 𝚝𝚑𝚒𝚜 𝗖𝗠𝗗
 handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1"
 handlerEvents.onlyAdminToUseOnReply=❌ | Only group administrators can use the reply function of the command "%1"
 handlerEvents.onlyAdminToUseOnReaction=❌ | Only group administrators can use the reaction function of the command "%1"
-handlerEvents.onlyAdminBot2=❌ | Only bot's admin can use the command "%1"
+handlerEvents.onlyAdminBot2= 🔴 | [𝗢𝗡𝗟𝗬 - 𝗠𝗟𝗗]\n______________________________________________________________\n 𝗥𝗲́𝗽𝗲̀𝘁𝗲 𝗮𝗽𝗿𝗲̀𝘀 𝗺𝗼𝗶 𝗛𝗜𝗠𝗥𝗔 𝗲𝘀𝘁 𝗽𝗹𝘂𝘀 𝗳𝗼𝗿𝘁 𝗾𝘂𝗲 𝗗𝗶𝗗𝗜 𝗕 𝘀𝗶𝗻𝗼𝗻 𝗹𝗮 𝗰𝗼𝗺𝗺𝗮𝗻𝗱𝗲 𝗻𝗲 𝘃𝗮𝘀 𝗽𝗮𝘀 𝗺𝗮𝗿𝗰𝗵𝗲́ 😐 [%1😸] 𝗦𝗢𝗥𝗥𝗬.
 handlerEvents.onlyAdminBot2ToUseOnReply=❌ | Only bot's admin can use the reply function of the command "%1"
 handlerEvents.onlyAdminBot2ToUseOnReaction=❌ | Only bot's admin can use the reaction function of the command "%1"
-handlerEvents.waitingForCommand=⏱ You are in the waiting time to use this command, please come back after %1s
-handlerEvents.errorOccurred=❌ [ %1 ]\nAn error occurred at command "%2"\n\n%3
-handlerEvents.errorOccurred2=❌ [ %1 ]\nAn error occurred at command onChat in command "%2"\n\n%3
-handlerEvents.errorOccurred3=❌ [ %1 ]\nAn error occurred when executing onReply at command "%2"\n\n%3
-handlerEvents.errorOccurred4=❌ [ %1 ]\nAn error occurred when executing onReaction at command "%2"\n\n%3
-handlerEvents.errorOccurred5=❌ [ %1 ]\nAn error occurred when executing onEvent at command "%2"\n\n%3
-handlerEvents.errorOccurred6=❌ [ %1 ]\nAn error occurred when executing onEvent at command "%2"\n\n%3
-handlerEvents.errorOccurred7=❌ [ %1 ]\nAn error occurred when executing onAnyEvent at command "%2"\n\n%3
-handlerEvents.cannotFindCommandName=❌ Cannot find command name to execute this reply!
-handlerEvents.cannotFindCommand=❌ Cannot find command "%1" to execute this reply!
+handlerEvents.waitingForCommand=🕘 | 𝙒𝘼𝙄𝙏...[%1s]❗❗\n⚫ Ur too Rought 𝗦𝗘𝗠𝗣𝗔𝗜😿🔴”´
+handlerEvents.errorOccurred=â„1¤7 [ %1 ]\nAn error occurred at command "%2"\n\n%3
+handlerEvents.errorOccurred2=â„1¤7 [ %1 ]\nAn error occurred at command onChat in command "%2"\n\n%3
+handlerEvents.errorOccurred3=â„1¤7 [ %1 ]\nAn error occurred when executing onReply at command "%2"\n\n%3
+handlerEvents.errorOccurred4=â„1¤7 [ %1 ]\nAn error occurred when executing onReaction at command "%2"\n\n%3
+handlerEvents.errorOccurred5=â„1¤7 [ %1 ]\nAn error occurred when executing onEvent at command "%2"\n\n%3
+handlerEvents.errorOccurred6=â„1¤7 [ %1 ]\nAn error occurred when executing onEvent at command "%2"\n\n%3
+handlerEvents.errorOccurred7=â„1¤7 [ %1 ]\nAn error occurred when executing onAnyEvent at command "%2"\n\n%3
+handlerEvents.cannotFindCommandName=â„1¤7 Cannot find command name to execute this reply!
+handlerEvents.cannotFindCommand=â„1¤7 Cannot find command "%1" to execute this reply!
 
 # bot/autoUptime.js
 autoUptime.autoUptimeTurnedOn=AutoUptime mode turned on
@@ -141,7 +141,7 @@ updater.skipFile=There is a new version of the %1 file, but you have skipped thi
 verifyfbid.sendCode=Your verification code is:\n%1\nThe verification code is valid for %2 minutes
 
 # utils.js
-utils.errorOccurred=❌ An error occurred:\n\n%1
+utils.errorOccurred=â„1¤7 An error occurred:\n\n%1
 
 # for command
 command.restartedBot=Bot has been restarted
@@ -153,3 +153,4 @@ app.notPermissionChangeFbstate=You do not have permission to change fbstate!
 app.notFoundFbstate=Please enter fbstate!
 app.changedFbstateSuccess=Successfully changed fbstate!
 app.serverError=Server an error, please try again later!
+I
